force-app/main/default/objects/Saver_Rate__c/Saver_Rate__c.object-meta.xml
<CustomObject>
    <description>Tracks saver balance/contribution rates for plans with Ubiquity</description>
    <label>Saver Rate</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Saver Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Saver Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>