force-app/main/default/objects/Saver_Rate__c/fields/Active_Employees__c.field-meta.xml
<CustomField>
    <fullName>Active_Employees__c</fullName>
    <description>Total Employees - Terminated Employees -- results in total employees on census without a termination date.</description>
    <formula>Total_Employees__c -  Terminated_Employees__c</formula>
    <inlineHelpText>Total Employees - Terminated Employees -- results in total employees on census without a termination date.</inlineHelpText>
    <label>Active Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>