force-app/main/default/objects/Saver_Rate__c/fields/Billable_Headcount__c.field-meta.xml
<CustomField>
    <fullName>Billable_Headcount__c</fullName>
    <description>Eligible w/ Balance + Terminated w/ Balance</description>
    <formula>Eligible_Employees_w_Balance__c + Terminated_w_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Eligible w/ Balance + Terminated w/ Balance</inlineHelpText>
    <label>Billable Headcount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>