force-app/main/default/objects/Saver_Rate__c/fields/Date_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Date_Recorded__c</fullName>
    <description>Date data was recorded from Paradigm</description>
    <inlineHelpText>Date data was recorded from Paradigm</inlineHelpText>
    <label>Date Recorded</label>
    <type>Date</type>
</CustomField>