force-app/main/default/objects/Saver_Rate__c/fields/Eligible_Balance_Rate__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Balance_Rate__c</fullName>
    <description>Eligible Employees w Balance / Eligible Employees</description>
    <formula>Eligible_Employees_w_Balance__c /  Eligible_Employees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Eligible Employees w Balance / Eligible Employees</inlineHelpText>
    <label>Eligible Balance Rate</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>