force-app/main/default/objects/Saver_Rate__c/fields/Eligible_Employees__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Employees__c</fullName>
    <description>Active employees who have met eligibility requirements</description>
    <inlineHelpText>Active employees who have met eligibility requirements</inlineHelpText>
    <label>Eligible Employees</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>