force-app/main/default/objects/Saver_Rate__c/fields/Eligible_w_Requested_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Eligible_w_Requested_Contribution__c</fullName>
    <description>Eligible employees with non-zero Requested Contribution amount.   Does NOT include savers who told employers/payroll directly to start contributions without enrolling/entering requested amount on Ubiquity site.</description>
    <inlineHelpText>Eligible employees with non-zero Requested Contribution amount.   Does NOT include savers who told employers/payroll directly to start contributions without enrolling/entering requested amount on Ubiquity site.</inlineHelpText>
    <label>Eligible w Requested Contribution</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>