force-app/main/default/objects/Saver_Rate__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <description>Plan this Saver Rate is for</description>
    <inlineHelpText>Plan this Saver Rate is for</inlineHelpText>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Saver Rates</relationshipLabel>
    <relationshipName>Saver_Rates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>