force-app/main/default/objects/Saver_Rate__c/fields/Plan_Assets__c.field-meta.xml
<CustomField>
    <fullName>Plan_Assets__c</fullName>
    <label>Plan Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>