force-app/main/default/objects/Saver_Rate__c/fields/Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Plan_Status__c</fullName>
    <description>Plan Status at time of record creation</description>
    <inlineHelpText>Plan Status at time of record creation</inlineHelpText>
    <label>Plan Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>