force-app/main/default/objects/Saver_Rate__c/fields/Potential_New_Savers__c.field-meta.xml
<CustomField>
    <fullName>Potential_New_Savers__c</fullName>
    <description>Eligible employees - eligible employees w/ balance |  Tells us how many new savers a plan has available.</description>
    <formula>Eligible_Employees__c - Eligible_Employees_w_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Eligible employees - eligible employees w/ balance |  Tells us how many new savers a plan has available.</inlineHelpText>
    <label>Potential New Savers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>