force-app/main/default/objects/Saver_Rate__c/fields/Record_Event__c.field-meta.xml
<CustomField>
    <fullName>Record_Event__c</fullName>
    <description>Confirms the reason the Saver Rate was recorded</description>
    <inlineHelpText>Confirms the reason the Saver Rate was recorded</inlineHelpText>
    <label>Record Event</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enrollment Meeting</fullName>
            </value>
            <value>
                <fullName>Post Enrollment Meeting</fullName>
            </value>
            <value>
                <fullName>Enrollment Kit Only</fullName>
            </value>
            <value>
                <fullName>Health Check</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paradigm Import</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>