force-app/main/default/objects/Saver_Rate__c/fields/Terminated_Employees__c.field-meta.xml
<CustomField>
    <fullName>Terminated_Employees__c</fullName>
    <description>Total Terminated employees on Census</description>
    <inlineHelpText>Total Terminated employees on Census</inlineHelpText>
    <label>Terminated Employees</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>