force-app/main/default/objects/Saver_Rate__c/fields/Terminated_w_Balance__c.field-meta.xml
<CustomField>
    <fullName>Terminated_w_Balance__c</fullName>
    <description>Terminated employees who have a balance in Employee and/or Employer sources</description>
    <inlineHelpText>Terminated employees who have a balance in Employee and/or Employer sources</inlineHelpText>
    <label>Terminated w Balance</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>