force-app/main/default/objects/Saver_Rate__c/fields/Total_Employees__c.field-meta.xml
<CustomField>
    <fullName>Total_Employees__c</fullName>
    <description>Active + Terminated from Census</description>
    <inlineHelpText>Active + Terminated from Census</inlineHelpText>
    <label>Total Employees</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>